fix: cambia z-index al header para que superponga a todos los elementos

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ header {
     left: 0;
 	top: 0;
     position: fixed;
+    z-index: 10;
 }
 
 header img {
